--- a/cancer_seqmentation.ipynb
+++ b/cancer_seqmentation.ipynb
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "id": "fd49d239",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1094,7 @@
        "Malignant neoplasm of uterus, part unspecified             2"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,8 +1102,241 @@
    "source": [
     "dx_claims = cancer_billing_raw[['claim_id','Cancer_Type']].groupby('Cancer_Type').agg(\n",
     "    Total_Claims=('claim_id', 'count'))\n",
-    "new_claims = dx_claims.merge(cancer_groups,on='Cancer_Type')\n",
+    "\n",
     "dx_claims"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "805fbdd0",
+   "metadata": {},
+   "source": [
+    "## Total Paid Amount Per Cancer Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "82572b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total_Paid_Amount</th>\n",
+       "      <th>Avg_Paid_Amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cancer_Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Malignant neoplasm of base of tongue</th>\n",
+       "      <td>214.760006</td>\n",
+       "      <td>107.380003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Malignant neoplasm of prostate</th>\n",
+       "      <td>91180.420297</td>\n",
+       "      <td>91.180420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Malignant neoplasm of rectum</th>\n",
+       "      <td>2198.090007</td>\n",
+       "      <td>199.826364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Malignant neoplasm of thymus</th>\n",
+       "      <td>8.420000</td>\n",
+       "      <td>8.420000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Malignant neoplasm of thyroid gland</th>\n",
+       "      <td>26429.100387</td>\n",
+       "      <td>100.874429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Malignant neoplasm of uterus, part unspecified</th>\n",
+       "      <td>120.730003</td>\n",
+       "      <td>60.365002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Total_Paid_Amount  \\\n",
+       "Cancer_Type                                                         \n",
+       "Malignant neoplasm of base of tongue                   214.760006   \n",
+       "Malignant neoplasm of prostate                       91180.420297   \n",
+       "Malignant neoplasm of rectum                          2198.090007   \n",
+       "Malignant neoplasm of thymus                             8.420000   \n",
+       "Malignant neoplasm of thyroid gland                  26429.100387   \n",
+       "Malignant neoplasm of uterus, part unspecified         120.730003   \n",
+       "\n",
+       "                                                Avg_Paid_Amount  \n",
+       "Cancer_Type                                                      \n",
+       "Malignant neoplasm of base of tongue                 107.380003  \n",
+       "Malignant neoplasm of prostate                        91.180420  \n",
+       "Malignant neoplasm of rectum                         199.826364  \n",
+       "Malignant neoplasm of thymus                           8.420000  \n",
+       "Malignant neoplasm of thyroid gland                  100.874429  \n",
+       "Malignant neoplasm of uterus, part unspecified        60.365002  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dx_paid = cancer_billing_raw[['Cancer_Type', 'paid_amount']].groupby('Cancer_Type').agg(\n",
+    "    Total_Paid_Amount=('paid_amount', 'sum'),\n",
+    "    Avg_Paid_Amount=('paid_amount', 'mean'))\n",
+    "\n",
+    "dx_paid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c330a78",
+   "metadata": {},
+   "source": [
+    "## Total Paid Amount Per Place of Service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "96795adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total_Paid_Amount</th>\n",
+       "      <th>Avg_Paid_Amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>place_of_service_description</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ambulance - Land</th>\n",
+       "      <td>72.939999</td>\n",
+       "      <td>36.469999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ambulatory Surgical Center</th>\n",
+       "      <td>999.389999</td>\n",
+       "      <td>111.043333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Emergency Room – Hospital</th>\n",
+       "      <td>143.380005</td>\n",
+       "      <td>143.380005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Independent Laboratory</th>\n",
+       "      <td>8354.780012</td>\n",
+       "      <td>20.427335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inpatient Hospital</th>\n",
+       "      <td>5494.420016</td>\n",
+       "      <td>289.180001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Off Campus-Outpatient Hospital</th>\n",
+       "      <td>990.490009</td>\n",
+       "      <td>43.064783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Office</th>\n",
+       "      <td>59271.920151</td>\n",
+       "      <td>105.466050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>On Campus-Outpatient Hospital</th>\n",
+       "      <td>12934.980046</td>\n",
+       "      <td>81.352076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Skilled Nursing Facility</th>\n",
+       "      <td>68.720001</td>\n",
+       "      <td>68.720001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Total_Paid_Amount  Avg_Paid_Amount\n",
+       "place_of_service_description                                      \n",
+       "Ambulance - Land                        72.939999        36.469999\n",
+       "Ambulatory Surgical Center             999.389999       111.043333\n",
+       "Emergency Room – Hospital              143.380005       143.380005\n",
+       "Independent Laboratory                8354.780012        20.427335\n",
+       "Inpatient Hospital                    5494.420016       289.180001\n",
+       "Off Campus-Outpatient Hospital         990.490009        43.064783\n",
+       "Office                               59271.920151       105.466050\n",
+       "On Campus-Outpatient Hospital        12934.980046        81.352076\n",
+       "Skilled Nursing Facility                68.720001        68.720001"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visit_type_cost = cancer_billing_raw[['place_of_service_description', 'paid_amount']].groupby('place_of_service_description').agg(\n",
+    "    Total_Paid_Amount=('paid_amount', 'sum'),\n",
+    "    Avg_Paid_Amount=('paid_amount', 'mean'))\n",
+    "\n",
+    "visit_type_cost"
    ]
   },
   {
